--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,22 @@
+body,
+html {
+	margin: 0;
+	padding: 0;
+	height: 100%;
+}
+
+#container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	min-height: 100vh;
+}
+
 #nav {
     width: 100px;
-    background-color: aquamarine;
-    float: left;
+    height: 200px;
+    background-color:darkseagreen;
+    float:left;
 }
 
 #wrapper {
@@ -11,30 +26,41 @@
 
 #banner {
     width: 800px;
-    height: 200px;
-    background-color: beige;
-    clear: both;
+    height: 100px;
+    background-color:darkcyan;
+    clear:both;
+    position:fixed;
 }
 
 #content {
     width: 600px;
-    float: left;
-    clear: both;
+    height: 400px;
+    background-color:aliceblue;
+    float:left;
 }
 
 #info {
     width: 100px;
-    background-color: darksalmon;
-    float: left;
+    height: 150px;
+    background-color:burlywood;
+    float:left;
 }
 
 #footer {
     width: 800px;
     height: 50px;
-    background-color: blueviolet;
-    clear: both;
+    background-color:peachpuff;
+    float:left;
+    clear:both;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+}
+#content, #nav, #info{
+    margin-top: 100px;
+}
 
 
 
